--- a/arch/arm64/configs/lineage-msm8998-yoshino-lilac_defconfig
+++ b/arch/arm64/configs/lineage-msm8998-yoshino-lilac_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm64 4.4.207 Kernel Configuration
+# Linux/arm64 4.4.276 Kernel Configuration
 #
 CONFIG_ARM64=y
 CONFIG_64BIT=y
@@ -551,6 +551,7 @@ CONFIG_CRASH_NOTES=y
 #
 CONFIG_BINFMT_ELF=y
 CONFIG_COMPAT_BINFMT_ELF=y
+CONFIG_ELFCORE=y
 # CONFIG_CORE_DUMP_DEFAULT_ELF_HEADERS is not set
 CONFIG_BINFMT_SCRIPT=y
 # CONFIG_HAVE_AOUT is not set
@@ -2194,6 +2195,7 @@ CONFIG_SPI_QUP=y
 CONFIG_SPI_SPIDEV=y
 # CONFIG_SPI_TLE62X0 is not set
 # CONFIG_SPI_SLAVE is not set
+CONFIG_SPI_DYNAMIC=y
 CONFIG_SPMI=y
 CONFIG_SPMI_MSM_PMIC_ARB=y
 CONFIG_VIRTSPMI_MSM_PMIC_ARB=y
@@ -4757,6 +4759,7 @@ CONFIG_SDFAT_DBG_MSG=y
 # CONFIG_SDFAT_DBG_BUGON is not set
 # CONFIG_SDFAT_DBG_WARNON is not set
 CONFIG_SDFAT_STATISTICS=y
+CONFIG_SDFAT_UEVENT=y
 # CONFIG_NTFS_FS is not set
 
 #
